--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ header > h1 {
 	border-color: #fff transparent transparent #fff;
 }
 
-#queryResults {
+#cseDiv {
 	width: auto;
 	height: auto;
 }
