--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header > h1 {
 	border-color: #fff transparent transparent #fff;
 }
 
-.giphyDiv {
+#giphyDiv {
 	text-align: center;
 	margin-top: 30px;
 	margin-bottom: 30px;
